--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -138,4 +138,5 @@
         </section>
     </div>
 </div>
+<app-kanban-add-overlay></app-kanban-add-overlay>
 <app-nav-footer-mobile></app-nav-footer-mobile>
