--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -3,6 +3,10 @@
         <div class="close-button" (click)="boardService.toggleEditOverlay()">
             <img src="assets/img/add-contacts/Vector.svg"  alt="" />
         </div>
+        <div class="testzwecken">
+            <button class="prev" (click)="prevTask()">Prev</button>
+            <button class="next" (click)="prevTask()">Next</button>
+        </div>
         <div class="overlay-content-wrapper">
             <div class="content-in-overlay">
                 <form class="kanban-overlay-form">
@@ -58,14 +62,13 @@
                     <span class="assigned-span">Assigned to</span>
                     <div class="all-user-container">
                         <mat-select [(ngModel)]="task.assignedTo" panelClass="select-to-assign"  required name="name" id="" multiple>
-                            @for (user of overlayState.contactList; track $index) {
-                                @if (task.assignedTo.includes(user)) {
-                                
-                                <mat-option id={{$index}} [value]="user" aria-checked="true">
-                                    <div class="option-text"><div class="select-initials" [style.background]="user.color">{{user.initials}}</div> <div>{{user.firstName}} {{user.lastName}}</div></div>
+                            @for (assigned of task.assignedTo; track $index) {
+                                <mat-option id={{$index}} [value]="assigned" aria-checked="true">
+                                    <div class="option-text"><div class="select-initials" [style.background]="assigned.color">{{assigned.initials}}</div> <div>{{assigned.firstName}} {{assigned.lastName}}</div></div>
                                 </mat-option>
-                                }
-                                @else{
+                            }
+                            @for (user of overlayState.contactList; track $index) {
+                                @if (!isUserAssigned(user)) {
                                 <mat-option id={{$index}} [value]="user">
                                     <div class="option-text"><div class="select-initials" [style.background]="user.color">{{user.initials}}</div> <div>{{user.firstName}} {{user.lastName}}</div></div>
                                 </mat-option>
