--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.html
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.html
@@ -98,14 +98,28 @@
                     <div class="list-of-members">
                         <div class="kanban-overlay-subtask">
                             <span class="subtask-span">Subtask</span>
-                            <div class="subtaskfield">
-                                @for (subtaskInput of taskList.subTaskFillTest; track $index) {
-                                <input [(ngModel)]="subtaskInput.text" type="text" class="input-subtask" placeholder="Add new subtask">
-                                }
+                            <div class="subtaskfield" (click)="$event.stopPropagation();">
+                        <input [(ngModel)]="subtaskString" type="text"(focus)="isInputFocused = true" >
+                        @if(!isInputFocused){
+                            <div class="add">
+                                <img src="assets/img/kanban-edit-overlay/plus-zichen.svg" alt=""/>
                             </div>
+                        }@else {
+                            <div class="submit-cancel">
+                                <button (click)="emptySubtask()">
+                                    <img  src="assets/img/kanban-edit-overlay/exit-subtask.svg" alt="">
+                                </button>
+                                
+                                <div class="grey-line"></div>
+                                <button (click)="pushToSubtask()">
+                                    <img  src="assets/img/kanban-edit-overlay/checkmark-subtask.svg" alt="">
+                                </button>
+                            </div>
+                        }
+                    </div>
 
                             <div class="each-sub-task">
-                                <button class="clear" (click)="clearSubtask()">
+                                <button class="clear" >
                                     Clear
                                     <svg width="32" height="32" viewBox="0 0 32 32" fill="currentColor"
                                         xmlns="http://www.w3.org/2000/svg">
