--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
@@ -120,8 +120,8 @@ section {
 
     .close-button {
         position: relative;
-        right: 0;
-        top: 0;
+        left: 8em;
+        bottom: 2.5em;
         font-weight: 600;
         gap: 1em;
         cursor: pointer;
@@ -282,17 +282,59 @@ section {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                
+                border: 2px solid rgba(0, 0, 0, 0.151);
+                border-radius: 10px;
+                width: 100%;
+                height: 48px;
 
-                .input-subtask {
+                input {
                     width: 100%;
-                    font-size: 16px;
                     padding: 1em;
-                    height: 48px;
-                    border-radius: 10px;
-                    border: 2px solid rgba(0, 0, 0, 0.049);
+                    height: 100%;
+                    border: transparent;
+                    font-size: 16px;
+                    background-color: transparent;
+
+                    &:focus {
+                        border-radius: 10px;
+                    }
                 }
             }
+            .add,
+                        .submit-cancel {
+                            display: flex;
+                            align-items: center;
+                            position: absolute;
+                            right: 1em;
+                            cursor: pointer;
+                        }
+
+                        .add {
+                            z-index: 10;
+                            height: 100%;
+
+                            img {
+                                &:hover {
+                                    background-color: rgba(0, 0, 0, 0.091);
+                                    border-radius: 50px;
+                                }
+                            }
+                        }
+
+                        .submit-cancel {
+                            button {
+                                background-color: transparent;
+                                border: transparent;
+                            }
+
+                          
+                            .grey-line {
+                                width: 2px;
+                                height: 24px;
+                                background-color: rgba(128, 128, 128, 0.41);
+                                margin: 0px 2px;
+                            }
+                        }
         }
 
         .each-sub-task {
