--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
@@ -13,7 +13,8 @@ section {
     height: 92dvh;
     z-index: 6;
     border-radius: 40px;
-    background-color: rgb(130, 146, 219);
+    background-color: white;
+    box-shadow: black 0px 0px 15px 0px;
 
     // ----------- Left Side ----------
     .left-addtask {
@@ -210,7 +211,7 @@ section {
                 mat-select {
                     display: flex;
                     align-items: center;
-                    border: 2px rgba(0, 0, 0, 0.346) solid;
+                    border: 2px rgba(0, 0, 0, 0.049) solid;
                     width: 100%;
                     border-radius: 10px;
                     height: 48px;
@@ -244,7 +245,7 @@ section {
             }
 
             select {
-                border: 2px rgba(0, 0, 0, 0.346) solid;
+                border: 2px rgba(0, 0, 0, 0.049) solid;
                 width: 100%;
                 border-radius: 10px;
                 height: 48px;
@@ -282,7 +283,7 @@ section {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                border: 2px solid rgba(0, 0, 0, 0.151);
+                border: 2px solid rgba(0, 0, 0, 0.049);
                 border-radius: 10px;
                 width: 100%;
                 height: 48px;
