--- a/src/app/kanban/kanban-board/kanban-board.component.html
+++ b/src/app/kanban/kanban-board/kanban-board.component.html
@@ -99,5 +99,8 @@
   <app-full-card [task]="boardService.selectedTask"></app-full-card>
   }
 
+  <app-kanban-add-overlay></app-kanban-add-overlay>
+
+
 
 </section>
