--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
@@ -6,12 +6,10 @@ section {
 }
 
 .content {
-    position: relative;
+    width: 100%;
+    height: 800px;
     display: flex;
-    bottom: 87em;
-    width: 70%;
-    height: 92dvh;
-    z-index: 6;
+    z-index: 15;
     border-radius: 40px;
     background-color: white;
     box-shadow: black 0px 0px 15px 0px;
@@ -27,33 +25,26 @@ section {
         .left-content-wrapper {
             display: flex;
             flex-direction: column;
-            gap: 4em;
+            justify-content: center;
+            height: 80%;
             width: 80%;
 
             .kanban-form {
                 display: flex;
                 flex-direction: column;
+                justify-content: space-between;
                 width: 100%;
-                gap: 30px;
-                bottom: 2.5em;
+                height: 76%;
+                bottom: 13.5em;
 
                 h1 {
-                    bottom: 1.5em;
                     font-size: 6em;
                 }
 
-                .form-label {
-                    font-size: 1.6em;
 
-                    .required-asterisk {
-                        color: red;
-                        margin-right: 1em;
-                    }
-                }
 
                 .required-label {
                     font-size: 1.6em;
-                    top: 10em;
                 }
 
                 .div-cont {
@@ -90,14 +81,23 @@ section {
 }
 
 .line {
-    top: 22dvh;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 2px;
-    height: 50dvh;
-    background-color: rgba(0, 0, 0, 0.049);
-    margin: 0px 2px;
+    height: 100%;
+
+
+    .hyphen {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 50%;
+        background-color: rgba(0, 0, 0, 0.049);
+        margin: 0px 2px;
+    }
 }
 
 .user-feedback {
@@ -166,10 +166,12 @@ section {
                     background-color: #ff3d00;
                     color: white;
                 }
+
                 .active-medium {
                     background-color: #ffa800;
                     color: white;
                 }
+
                 .active-low {
                     background-color: #7ae229;
                     color: white;
@@ -301,41 +303,42 @@ section {
                     }
                 }
             }
+
             .add,
-                        .submit-cancel {
-                            display: flex;
-                            align-items: center;
-                            position: absolute;
-                            right: 1em;
-                            cursor: pointer;
-                        }
+            .submit-cancel {
+                display: flex;
+                align-items: center;
+                position: absolute;
+                right: 1em;
+                cursor: pointer;
+            }
 
-                        .add {
-                            z-index: 10;
-                            height: 100%;
+            .add {
+                z-index: 10;
+                height: 100%;
 
-                            img {
-                                &:hover {
-                                    background-color: rgba(0, 0, 0, 0.091);
-                                    border-radius: 50px;
-                                }
-                            }
-                        }
+                img {
+                    &:hover {
+                        background-color: rgba(0, 0, 0, 0.091);
+                        border-radius: 50px;
+                    }
+                }
+            }
 
-                        .submit-cancel {
-                            button {
-                                background-color: transparent;
-                                border: transparent;
-                            }
+            .submit-cancel {
+                button {
+                    background-color: transparent;
+                    border: transparent;
+                }
 
-                          
-                            .grey-line {
-                                width: 2px;
-                                height: 24px;
-                                background-color: rgba(128, 128, 128, 0.41);
-                                margin: 0px 2px;
-                            }
-                        }
+
+                .grey-line {
+                    width: 2px;
+                    height: 24px;
+                    background-color: rgba(128, 128, 128, 0.41);
+                    margin: 0px 2px;
+                }
+            }
         }
 
         .each-sub-task {
@@ -492,4 +495,21 @@ input[type="number"] {
     width: 100%;
     flex-direction: row;
     align-items: center;
+}
+
+.left-side-content {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.form-label {
+    display: flex;
+    width: 80%;
+    font-size: 1.6em;
+
+    .required-asterisk {
+        color: red;
+        margin-right: 1em;
+    }
 }
