--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
@@ -1,53 +1,21 @@
-// .main-content {
-//     display: flex;
-//     height: 100dvh;
-//     overflow-x: hidden;
-
-//     @media (max-width: 965px) {
-//         height: 92dvh;
-//     }
-// }
-
-// .main-content-input {
-//     display: flex;
-//     flex-direction: column;
-//     width: 100%;
-// }
-
 section {
     font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .content {
+    position: relative;
     display: flex;
-    width: 100%;
+    bottom: 87em;
+    width: 70%;
     height: 92dvh;
+    z-index: 6;
+    border-radius: 40px;
+    background-color: white;
+    box-shadow: black 0px 0px 15px 0px;
 
-    .close-button {
-        font-weight: 600;
-        gap: 1em;
-        cursor: pointer;
-        border: none;
-        border-radius: 30px;
-        font-size: 21px;
-        color: rgb(95, 95, 95);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 32px;
-        height: 32px;
-        background: url("../../../../../public/assets/img/kanban-board/fullCardCloseButton.png");
-        background-repeat: none;
-        background-position: center;
-        transition: ease-in-out 0.15s;
-
-        &:hover {
-            background-color: rgb(230, 230, 230);
-        }
-    }
-
-
-    
     // ----------- Left Side ----------
     .left-addtask {
         width: 49%;
@@ -151,6 +119,29 @@ section {
     justify-content: center;
     align-items: center;
 
+    .close-button {
+        position: relative;
+        left: 8em;
+        bottom: 2.5em;
+        font-weight: 600;
+        gap: 1em;
+        cursor: pointer;
+        border: none;
+        border-radius: 30px;
+        font-size: 21px;
+        color: rgb(95, 95, 95);
+        width: 32px;
+        height: 32px;
+        background: url("../../../public/assets/img/kanban-board/fullCardCloseButton.png");
+        background-repeat: none;
+        background-position: center;
+        transition: ease-in-out 0.15s;
+
+        &:hover {
+            background-color: rgb(230, 230, 230);
+        }
+    }
+
     .right-content-wrapper {
         display: flex;
         flex-direction: column;
@@ -220,7 +211,7 @@ section {
                 mat-select {
                     display: flex;
                     align-items: center;
-                    border: 2px rgba(0, 0, 0, 0.346) solid;
+                    border: 2px rgba(0, 0, 0, 0.049) solid;
                     width: 100%;
                     border-radius: 10px;
                     height: 48px;
@@ -254,7 +245,7 @@ section {
             }
 
             select {
-                border: 2px rgba(0, 0, 0, 0.346) solid;
+                border: 2px rgba(0, 0, 0, 0.049) solid;
                 width: 100%;
                 border-radius: 10px;
                 height: 48px;
@@ -292,13 +283,59 @@ section {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                background-color: white;
-                padding: 1em;
-                font-size: 16px;
-                height: 48px;
                 border: 2px solid rgba(0, 0, 0, 0.049);
                 border-radius: 10px;
+                width: 100%;
+                height: 48px;
+
+                input {
+                    width: 100%;
+                    padding: 1em;
+                    height: 100%;
+                    border: transparent;
+                    font-size: 16px;
+                    background-color: transparent;
+
+                    &:focus {
+                        border-radius: 10px;
+                    }
+                }
             }
+            .add,
+                        .submit-cancel {
+                            display: flex;
+                            align-items: center;
+                            position: absolute;
+                            right: 1em;
+                            cursor: pointer;
+                        }
+
+                        .add {
+                            z-index: 10;
+                            height: 100%;
+
+                            img {
+                                &:hover {
+                                    background-color: rgba(0, 0, 0, 0.091);
+                                    border-radius: 50px;
+                                }
+                            }
+                        }
+
+                        .submit-cancel {
+                            button {
+                                background-color: transparent;
+                                border: transparent;
+                            }
+
+                          
+                            .grey-line {
+                                width: 2px;
+                                height: 24px;
+                                background-color: rgba(128, 128, 128, 0.41);
+                                margin: 0px 2px;
+                            }
+                        }
         }
 
         .each-sub-task {
@@ -448,4 +485,11 @@ input[type="number"] {
     &:hover {
         background: #eeeeee;
     }
+}
+
+.option-text {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
 }
