--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.html
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.html
@@ -1,6 +1,6 @@
 <section>
             <div class="content">
-              <button class="close-button" (click)="boardService.openFullCard(task)"></button>
+              <button class="close-button" (click)="boardService.toggleAddOverlay()">x</button>
                 <div class="left-addtask">
                     <div class="left-content-wrapper">
                         <form class="kanban-form"  #addTaskForm="ngForm">
@@ -32,7 +32,7 @@
                     </div>
                 </div>
 
-                <div class="line"></div>
+                <div class="line"> <div class="hyphen"></div></div>
 
 
 
@@ -119,7 +119,7 @@
                                                     fill="currentColor" />
                                             </svg>
                                         </button>
-                                        <button class="create-task" (click)="boardService.addTasks(taskList)">
+                                        <button class="create-task" (click)="boardService.addTasks(taskList); boardService.toggleAddOverlay()">
                                             Create Task
                                             <img src="assets/img/add-contacts/check.svg" alt="Create Task" />
                                         </button>
