Style: correction of add overlay

--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.html
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.html
@@ -1,6 +1,6 @@
 <section>
             <div class="content">
-              <button class="close-button" (click)="boardService.toggleAddOverlay()">x</button>
+              <button class="close-button" (click)="boardService.toggleAddOverlay()"></button>
                 <div class="left-addtask">
                     <div class="left-content-wrapper">
                         <form class="kanban-form"  #addTaskForm="ngForm">
