Improve kanban UI responsiveness and accessibility
Enhanced responsive design for kanban add and edit components with additional media queries and layout adjustments. Added a required field label for subtasks on small screens. Removed test buttons from the edit overlay and improved scrollbar styling for better usability. Minor button and spacing tweaks were also made for improved mobile experience.

--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -109,6 +109,9 @@
 											<input [(ngModel)]="subtaskInput.text" type="text" class="input-subtask" placeholder="Add new subtask">
                                         }
                                     </div>
+                                    <label class="form-label-r required-label">
+                                        <span class="required-asterisk">*</span>This field is required
+                                    </label>
 
                                     <div class="each-sub-task">
                                         <button class="clear" (click)="clearSubtask()">
@@ -124,6 +127,7 @@
                                             Create Task
                                             <img src="assets/img/add-contacts/check.svg" alt="Create Task" />
                                         </button>
+                                        
                                     </div>
                                 </div>
                             </div>
