--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -16,12 +16,24 @@
 
 section {
     font-size: 10px;
+    @media(max-width:1280px){
+        font-size: 9px;
+    }    
+    @media(max-width:1240px){
+        font-size: 8px;
+    }
+                @media(max-width:1040px){
+                font-size: 7px;
+            }
 }
 
 .content {
     display: flex;
     width: 100%;
     height: 92dvh;
+                @media(max-width:750px){
+                flex-direction: column;
+            }
 
 
     // ----------- Left Side ----------
@@ -31,22 +43,26 @@ section {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        @media(max-width:750px){
+                width: 100%;
+            }
 
         .left-content-wrapper {
             display: flex;
             flex-direction: column;
             gap: 4em;
             width: 80%;
+            @media(max-width:1300px){
+                width: 90%;
+            }
 
             .kanban-form {
                 display: flex;
                 flex-direction: column;
                 width: 100%;
                 gap: 30px;
-                bottom: 2.5em;
 
                 h1 {
-                    bottom: 1.5em;
                     font-size: 6em;
                 }
 
@@ -62,6 +78,9 @@ section {
                 .required-label {
                     font-size: 1.6em;
                     top: 10em;
+                    @media(max-width: 750px){
+                    display: none;
+                }
                 }
 
                 .div-cont {
@@ -106,6 +125,9 @@ section {
     height: 50dvh;
     background-color: rgba(0, 0, 0, 0.049);
     margin: 0px 2px;
+                @media(max-width:750px){
+                display: none;
+            }
 }
 
 .user-feedback {
@@ -126,12 +148,19 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+            @media(max-width:750px){
+                width: 100%;
+            }
 
     .right-content-wrapper {
         display: flex;
         flex-direction: column;
         width: 80%;
+        gap: 6em;
         top: 8em;
+            @media(max-width:1300px){
+                width: 90%;
+            }
 
         .kanban-addtask-priority {
             width: 100%;
@@ -162,16 +191,23 @@ section {
 
                 button {
                     display: flex;
+                    justify-content: center;
                     gap: 0.4em;
                     background-color: white;
                     border: solid rgba(0, 0, 0, 0.049) 2px;
                     border-radius: 10px;
-                    font-size: 20px;
-                    padding: 10px 16px;
+                    font-size: 2em;
+                    padding:0.7em 1em;
                     transition: box-shadow 0.3s ease;
+                    @media(max-width:390px){
+                        font-size: 0px;
+                        height: 44px;
+                        width: 60px;
+                    }
 
                     img {
-                        width: 20px;
+                        width: 24px;
+                        
                     }
 
                     &:hover {
@@ -222,7 +258,6 @@ section {
 
             .form-label {
                 font-size: 1.6em;
-
                 .required-asterisk {
                     color: red;
                     margin-right: 1em;
@@ -281,7 +316,19 @@ section {
                     padding: 1em;
                     height: 48px;
                     border-radius: 10px;
+                    margin-bottom: 3em;
                     border: 2px solid rgba(0, 0, 0, 0.049);
+                }
+            }
+            .form-label-r {
+                display: none;
+                font-size: 2.6em;
+                @media(max-width:750px){
+                    display: block;
+                }
+                .required-asterisk {
+                    color: red;
+                    margin-right: 1em;
                 }
             }
         }
@@ -289,8 +336,9 @@ section {
         .each-sub-task {
             display: flex;
             justify-content: flex-end;
-            margin-top: 10em;
+            margin-top: 5em;
             gap: 1.5em;
+            margin-bottom: 2em;
 
             .clear {
                 display: flex;
@@ -338,6 +386,8 @@ section {
         }
     }
 }
+
+
 
 // -------- Other Components ----------
     .contact-list-content {
