--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -7,4 +7,5 @@
         </div>
   </div>
 </div>
+<div class="createdTask" > <p>Task added to board </p><img src="../../../assets/img/kanban-board/taskAddedIcon.png"></div>
 <app-nav-footer-mobile></app-nav-footer-mobile>
