--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
@@ -50,7 +50,7 @@ section {
                     flex-direction: column;
                     min-height: 64px;
 
-                    input,
+                    .input,
                     textarea {
                         min-height: 48px;
                         border-radius: 15px;
@@ -264,7 +264,7 @@ section {
                 width: 100%;
                 height: 48px;
 
-                input {
+                .input {
                     width: 100%;
                     padding: 1em;
                     height: 100%;
@@ -304,7 +304,6 @@ section {
                     background-color: transparent;
                     border: transparent;
                 }
-
 
                 .grey-line {
                     width: 2px;
@@ -488,26 +487,35 @@ input[type="number"] {
     }
 }
 
+.close-button {
+    position: absolute;
+    z-index: 2;
+    font-weight: 600;
+    top: 19px;
+    right: 35px;
+    cursor: pointer;
+    border: none;
+    border-radius: 30px;
+    font-size: 21px;
+    color: rgb(95, 95, 95);
+    width: 32px;
+    height: 32px;
+    background: url("../../../public/assets/img/kanban-board/fullCardCloseButton.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: ease-in-out 0.15s;
 
-    .close-button {
-        position: absolute;
-        z-index: 2;
-        font-weight: 600;
-        top: 19px;
-        right: 35px;
-        cursor: pointer;
-        border: none;
-        border-radius: 30px;
-        font-size: 21px;
-        color: rgb(95, 95, 95);
-        width: 32px;
-        height: 32px;
-        background: url("../../../public/assets/img/kanban-board/fullCardCloseButton.png");
-        background-repeat: no-repeat;
-        background-position: center;
-        transition: ease-in-out 0.15s;
-
-        &:hover {
-            background-color: rgb(230, 230, 230);
-        }
+    &:hover {
+        background-color: rgb(230, 230, 230);
     }
+}
+
+.errorborder {
+    border: 2px solid red!important;
+}
+
+.invalid-input {
+    height: 12px;
+    font-size: 12px;
+    color: red;
+}
