--- a/src/app/kanban/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban/kanban-board/kanban-board.component.scss
@@ -23,8 +23,8 @@ section {
                 flex-direction: column;
                 align-items: center;
                 width: 252px;
-                height: 100%;
-                overflow-y: auto;
+/*                 height: 100%;
+ */                overflow-y: auto;
                 scrollbar-width: none;
 
                 @media (max-width: 965px) {
