--- a/src/app/kanban/kanban.component.scss
+++ b/src/app/kanban/kanban.component.scss
@@ -68,3 +68,27 @@ input[type="number"] {
 .display {
     display: flex;
 }
+
+.createdTask {
+    z-index: 15;
+    width: 15em;
+    height: 4em;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+    padding: 0px 20px;
+    border-radius: 14px;
+    border: 1px solid black;
+    background-color: #2a3647;
+    color: white;
+    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.display{
+    display: flex;
+}
