feat&style: debugging project to submit

--- a/src/app/kanban/kanban-board/card/card.component.html
+++ b/src/app/kanban/kanban-board/card/card.component.html
@@ -1,6 +1,9 @@
 <section>
   <div class="testcontainer">
-    <div class="category {{task.category?.toLowerCase()?.replace(' ', '-')}}">{{task.category}}</div>
+    <div class="category-moveto">
+    <div class="category {{task.category?.toLowerCase()?.replace(' ', '-')}}">{{task.category}} </div>
+<div class="move-to-mobile"> <img src="../../../../../assets/img/kanban-board/mobileMoveToButton.png" alt=""></div>
+    </div>
     <div class="tite">
       <h4>{{task.title}}</h4>
     </div>
