--- a/src/app/kanban/kanban-board/card/card.component.scss
+++ b/src/app/kanban/kanban-board/card/card.component.scss
@@ -45,7 +45,11 @@ section {
 		box-shadow: 0 0 6px rgba(42, 54, 71, 0.3);
 	}
 
-	.category {
+	.category-moveto{
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
+			.category {
 		font-size: 16px;
 		display: flex;
 		justify-content: center;
@@ -55,6 +59,25 @@ section {
 		border-radius: 5px;
 		margin-bottom: 12px;
 	}
+	.move-to-mobile{
+		z-index: 20;
+		width: 25px;
+		height: 25px;
+		display: none;
+			&:hover {
+		box-shadow: 0 0 6px rgba(42, 54, 71, 0.3);
+	}
+		@media (max-width: 965px) {
+			display: flex;
+			img{
+				width: 25x;
+				height: 25px;
+			}
+		}
+	}
+	}
+
+
 
 	.description {
 		color: rgb(143, 143, 143);
