Update description label and style in Kanban add form
Replaced the description label with a span in the Kanban add component and adjusted the font size in the SCSS for improved consistency and appearance.

--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -21,9 +21,7 @@
                                 }
                             </div>
                             <div class="form-description div-cont">
-                                <label class="form-label">
-                                    Description<span class="required-asterisk">*</span>
-                                </label>
+                                <span>Description</span>
                                 <textarea [(ngModel)]="taskList.description" placeholder="Enter a Description "
                                     name="description" id=""></textarea>
                             </div>
