--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -89,7 +89,7 @@ section {
 
                     span {
                         color: rgba(0, 0, 0, 0.746);
-                        font-size: 18px;
+                        font-size: 1.6em;
                     }
                 }
             }
