Adjust Kanban styles and add debug click handler
Refactored SCSS for kanban-add and kanban-board components to improve responsiveness and layout. Added a click handler to the mobile move-to button in card.component.html that triggers a debug method logging to the console.

--- a/src/app/kanban/kanban-board/card/card.component.html
+++ b/src/app/kanban/kanban-board/card/card.component.html
@@ -2,7 +2,7 @@
   <div class="testcontainer">
     <div class="category-moveto">
     <div class="category {{task.category?.toLowerCase()?.replace(' ', '-')}}">{{task.category}} </div>
-<div class="move-to-mobile"> <img src="../../../../../assets/img/kanban-board/mobileMoveToButton.png" alt=""></div>
+<div class="move-to-mobile" (click)="debug()"> <img src="../../../../../assets/img/kanban-board/mobileMoveToButton.png" alt=""></div>
     </div>
     <div class="tite">
       <h4>{{task.title}}</h4>
